force-app/main/default/objects/TriggerFactorySettings__c/TriggerFactorySettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This controls the behavior of triggers based on the Trigger Factory</description>
    <label>Trigger Factory Settings</label>
</CustomObject>