force-app/main/default/objects/TriggerFactorySettings__c/fields/KillList__c.field-meta.xml
<CustomField>
    <fullName>KillList__c</fullName>
    <description>Any object names added to this list will not have their triggers execute.</description>
    <inlineHelpText>Any object names added to this list will not have their triggers execute.</inlineHelpText>
    <label>KillList</label>
    <type>TextArea</type>
</CustomField>