force-app/main/default/objects/TriggerFactorySettings__c/fields/UserKillList__c.field-meta.xml
<CustomField>
    <fullName>UserKillList__c</fullName>
    <description>Enter carriage-return-delimited list of UserIds to Kill all Triggers that run off the Trigger Factory for that user.</description>
    <label>User KillList</label>
    <type>TextArea</type>
</CustomField>